k8s-manifest/twotapp/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sandhya-mysqldb
  name: sandhya-mysqldb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandhya-mysqldb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sandhya-mysqldb
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        ports:
        - containerPort: 3306
        envFrom: # calling secret info 
        - secretRef: 
            name: sandhya-app-db
        resources:
          limits:
            memory: 1G
            cpu: 500m
status: {}
