k8s-manifest/twotapp/dbsvc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: sandhya-mysqldb
  name: sandhyadb-lb
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: sandhya-mysqldb
  type: ClusterIP
status:
  loadBalancer: {}
