k8s-manifest/twotapp/websvc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: d1
  name: sandhyaweblb
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: d1
  type: ClusterIP
status:
  loadBalancer: {}
